[package]
name = "aura"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.1.5"
bigdecimal = "0.3.0"
chumsky = "0.8.0"
clap = { version = "3.2.15", features = ["derive"] }
num-bigint = "0.4.3"
